k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: newstock.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: newstock-stock-frontend-service
            port:
              number: 3000
      - path: /api/member(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: newstock-stock-member-service
            port:
              number: 8001
      - path: /api/news(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: newstock-stock-news-service
            port:
              number: 8002
      - path: /api/stock(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: newstock-stock-stock-service
            port:
              number: 8003
